Fix the overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -1153,6 +1153,8 @@ box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
 }
 
 .causes_item .causes_text {
+  height: 15rem;
+  overflow: scroll;
   padding: 30px 35px 40px 30px;
 }
 
